--- a/CS320_Team_Fractal_Website/war/c.css
+++ b/CS320_Team_Fractal_Website/war/c.css
@@ -11,13 +11,36 @@ td.label {
 }
 
 h1{
-    color: #00FF00;
+    color: blue;
 }
 
 .error {
 	color: red;
 }
 
-.loggedIn{
+.loggedIn {
 	color: green;
 }
+
+.content {
+	color: MediumAquaMarine;
+	background-color: WhiteSmoke;
+	font-size: 200%;
+	font-family: 'Audiowide';
+	border-top: 4px solid Black;
+	border-bottom: 4px solid Black;
+	text-align: center;
+}
+
+input[type=Submit] {
+	background-color: WhiteSmoke;
+    border: 4px solid Black;
+    color: MediumAquaMarine;
+    text-align: center;
+    font-size: 75%;
+    font-family: 'Audiowide';
+    padding:5px 15px; 
+    margin: 5px;
+    cursor:default;
+}
+		    
