--- a/CS320_Team_Fractal_Website/war/c.css
+++ b/CS320_Team_Fractal_Website/war/c.css
@@ -68,7 +68,7 @@ h4{
 .content{
 }
 
-input[type=Submit] {
+input {
     margin-left: auto;
 	margin-right: auto;
 	font-family: 'Open Sans', sans-serif;
@@ -88,7 +88,7 @@ input[type=Submit] {
 	border: 1px solid #C2B9AA;
 }
 
-input[type=Submit]:hover {
+input:hover {
     background-color: #C2B9AA;
 	opacity: 1;
 }
