--- a/CS320_Team_Fractal_Website/war/c.css
+++ b/CS320_Team_Fractal_Website/war/c.css
@@ -1,3 +1,9 @@
+#home {
+	background-color: #FFF4E0;
+    background-image: url('img/mandelbrot.gif');
+    background-size: 100%;
+}
+
 body {
     background-color: #FFF4E0;
 }
@@ -65,7 +71,10 @@ h4{
 	color: Crimson;
 }
 
-.content{
+.info {
+	line-height: 150%;
+	font-family: 'Open Sans', sans-serif;
+	font-size: 18px;
 }
 
 input {
