--- a/CS320_Team_Fractal_Website/war/c.css
+++ b/CS320_Team_Fractal_Website/war/c.css
@@ -1,11 +1,34 @@
-#home {
-	background-color: #FFF4E0;
-    background-image: url('img/mandelbrot.gif');
-    background-size: 100%;
+.flex-container
+{
+	display: flex;
+	flex-direction: row;
+	width: auto;
+	height: 970px;
 }
+.border
+{
+	flex-basis: 25%;
+	background-image: url('img/mandelbrot.jpg');
+	background-size: auto;
+	background-repeat: no-repeat;
+	opacity: 0.8;
+}
+.center
+{
+	flex-basis: 50%;
+	margin-left: 25px;
+}	
 
 body {
     background-color: #FFF4E0;
+}
+
+.login-center
+{
+	display: flex;
+	justify-content: center;
+ 	align-items: center;
+ 	padding-top: 300px;
 }
 
 .invalid {
@@ -14,7 +37,7 @@ body {
 	font-size: 18px;
 	color: Crimson;
 }
-	
+
 .accountCreated{
 	font-weight: bold;
 	font-family: 'Open Sans', sans-serif;
@@ -102,83 +125,6 @@ input:hover {
 	opacity: 1;
 }
 
-
-.square1{
-	width: 20px;
- 	height: 20px;
- 	margin: 1px;
-	background-color: red;
-	position: relative;
-	animation-name: example1;
-    animation-duration: 6s;
-    animation-iteration-count: 1000;
-}
-
-@keyframes example1 {
-    0%   {background-color:red; left:0px; top:0px;}
-    25%  {background-color:yellow; left:940px; top:0px;}
-    50%  {background-color:blue; left:1880px; top:0px;}
-    75%  {background-color:green; left:940px; top:0px;}
-    100% {background-color:red; left:0px; top:0px;}
-}
-
-.square2{
-	width: 20px;
- 	height: 20px;
- 	margin: 1px;
-	background-color: yellow;
-	position: relative;
-	animation-name: example2;
-    animation-duration: 6s;
-    animation-iteration-count: 1000;
-}
-
-@keyframes example2 {
-    0%   {background-color:yellow; left:940px; top:0px;}
-    25%  {background-color:blue; left:1880px; top:0px;}
-    50%  {background-color:green; left:940px; top:0px;}
-    75%  {background-color:red; left:0px; top:0px;}
-    100% {background-color:yellow; left:940px; top:0px;}
-}
-
-.square3{
-	width: 20px;
- 	height: 20px;
- 	margin: 1px;
-	background-color: blue;
-	position: relative;
-	animation-name: example3;
-    animation-duration: 6s;
-    animation-iteration-count: 1000;
-}
-
-@keyframes example3 {
-	0%   {background-color:blue; left:1880px; top:0px;}
-    25%  {background-color:green; left:940px; top:0px;}
-    50%  {background-color:red; left:0px; top:0px;}
-    75%  {background-color:yellow; left:940px; top:0px;}
-    100% {background-color:blue; left:1880px; top:0px;}
-}
-
-.square4{
-	width: 20px;
- 	height: 20px;
- 	margin: 1px;
-	background-color: green;
-	position: relative;
-	animation-name: example4;
-    animation-duration: 6s;
-    animation-iteration-count: 1000;
-}
-
-@keyframes example4 {
-    0%   {background-color:green; left:940px; top:0px;}
-    25%  {background-color:red; left:0px; top:0px;}
-    50%  {background-color:yellow; left:940px; top:0px;}
-    75%  {background-color:blue; left:1880px; top:0px;}
-    100% {background-color:green; left:940px; top:0px;}
-}
-
 p
 {
 	font-size: 18px;
@@ -187,23 +133,23 @@ p
 }
 
 
-nav.topnav ul
+.topnav ul
 {
 	list-style-type: none;
 	margin: 0;
 	overflow: hidden;
 	padding: 0px 22px;
-	background-color: #FFF4E0;
+
 }
 
-nav.topnav li
+.topnav li
 {
 	display: inline;
 	padding: 15px;
 	float: left;
 }
 
-nav.topnav li a
+.topnav a
 {
 	display: block;
 	color: ##FFF4E0;
@@ -221,6 +167,24 @@ nav.topnav li a
     transition: .2s ease-in-out;
     cursor: pointer;
 }
+
+.topnav
+{
+	position: absolute;
+}
+
+.mainPage-nav-bg
+{
+	background-image: url('img/mandelbrot.jpg');
+	height: 120px;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	position: relative;
+	opacity: 0.8;
+}
+
+
 
 img
 {
