--- a/CS320_Team_Fractal_Website/war/c.css
+++ b/CS320_Team_Fractal_Website/war/c.css
@@ -112,6 +112,14 @@ h4{
 	font-size: 18px;
 }
 
+.downloadButton {
+	text-align: center;
+	font-size: 18px;
+	font-family: 'Open Sans', sans-serif;
+	color: #3D403A;
+	background-color: #FFF4E0;
+}
+
 input {
     margin-left: auto;
 	margin-right: auto;
