--- a/CS320_Team_Fractal_Website/war/c.css
+++ b/CS320_Team_Fractal_Website/war/c.css
@@ -80,7 +80,6 @@ h1{
 
 h2{
     color: #3D403A;
-	font-size: 45px;
 	font-weight: bold;
 	font-family: 'Poiret One', cursive;
 }
@@ -190,7 +189,7 @@ p
 .filternav a
 {
 	display: block;
-	color: ##FFF4E0;
+	color: #FFF4E0;
 	border-radius: 3px;
 	text-align: center;
 	padding: 10px;
@@ -209,6 +208,14 @@ p
 .filternav
 {
 
+}
+
+.param-list
+{
+	font-family: 'Open Sans', sans-serif;
+	font-size: 14px;
+	color: #3D403A;
+	
 }
 
 .mainPage-nav-bg
