playing with zooming stuff

--- a/CS320_Team_Fractal_Website/war/c.css
+++ b/CS320_Team_Fractal_Website/war/c.css
@@ -450,6 +450,16 @@ div.img-grid img
 	border-radius: 3px;
 }
 
+.fractalImage{
+    -khtml-user-select: none;
+    -o-user-select: none;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    user-select: none;
+	pointer-events: none;
+	cursor: default;
+}
+
 /*
 
 
