--- a/CS320_Team_Fractal_Website/war/c.css
+++ b/CS320_Team_Fractal_Website/war/c.css
@@ -473,6 +473,17 @@ div.img-grid img
 	background: rgba(0, 0, 0, 0);
 	width: 0px;
 	height: 0px;
+	border: 2px solid red;
+	
+	position:absolute;
+}
+#fractalDisplayZoomSelectorShadow{
+	left:-100px;
+	top:-100px;
+	opacity: 0.7;
+	background: rgba(0, 0, 0, 0);
+	width: 0px;
+	height: 0px;
 	border: 2px solid #666666;
 	
 	position:absolute;
