--- a/CS320_Team_Fractal_Website/war/c.css
+++ b/CS320_Team_Fractal_Website/war/c.css
@@ -489,6 +489,44 @@ div.img-grid img
 	position:absolute;
 }
 
+div.colorSliderContainer{
+	width: 200px;
+}
+
+input.colorSlider{
+ 	-webkit-appearance: none;
+	appearance: none;
+ 	height: 15px;
+ 	border-radius: 1px;
+ 	width: 100%;
+ 	background: #C2B9AA;
+ 	outline: none;
+ 	opacity: 0.7;
+ 	transition: opacity .2s;
+	-webkit-transition: .2s;
+}
+
+input.colorSlider::-webkit-slider-thumb {
+	-webkit-appearance: none;
+	appearance: none;
+	width: 25px;
+	height: 25px;
+	border-radius: 50%;
+	background: #000000;
+	cursor: pointer;
+}
+
+div.colorPreview{
+	background: #000000;
+	width: 50px;
+	height: 50px;
+	border: 1px solid #000000;
+	
+	left:150px;
+	bottom:50px;
+	position:relative;
+}
+
 /*
 
 
