List can now be sorted by any column, the page keeps searched fractal
that last part took me way too many hours for such a simple change
I'm not crying, I'm sweating through my eyes

--- a/CS320_Team_Fractal_Website/war/c.css
+++ b/CS320_Team_Fractal_Website/war/c.css
@@ -548,7 +548,7 @@ div.colorPreview{
 }
 
 /*css for browse fractals grid*/
-.browseGridContainer{
+#fractalTable{
 	width: 100%;
 	border: 1px solid #C2B9AA;
 }
