--- a/CS320_Team_Fractal_Website/war/c.css
+++ b/CS320_Team_Fractal_Website/war/c.css
@@ -547,6 +547,22 @@ div.colorPreview{
 	position:relative;
 }
 
+
+/*css for browse fractals grid*/
+.browseGridContainer{
+	width: 100%;
+	border: 1px solid #C2B9AA;
+}
+
+.browseGridText{
+	border: 1px solid #C2B9AA;
+	padding: 10px;
+	text-align: left;
+	font-size: 18px;
+	font-family: 'Open Sans', sans-serif;
+	color: #3D403A;
+}
+
 /*
 
 
