Fractals per page is saved but not used, fixed layout and submit issues

--- a/CS320_Team_Fractal_Website/war/c.css
+++ b/CS320_Team_Fractal_Website/war/c.css
@@ -547,8 +547,9 @@ div.colorPreview{
 	position:relative;
 }
 
+
 /*css for browse fractals grid*/
-#fractalTable{
+.browseGridContainer{
 	width: 100%;
 	border: 1px solid #C2B9AA;
 }
